--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-ace": "^8.0.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "styled-components": "^5.0.1",
+    "style-it": "^2.1.4",
     "sweetalert2": "^9.8.2",
     "sweetalert2-react-content": "^3.0.1"
   },
