--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.13.1",
+    "postcss": "^7.0.27",
+    "postcss-discard-comments": "^4.0.2",
+    "postcss-scss": "^2.0.0",
+    "postcss-shorthand-expand": "^1.0.1",
+    "postcss-strip-inline-comments": "^0.1.5",
     "react": "^16.13.0",
     "react-ace": "^8.0.0",
     "react-dom": "^16.13.0",
